# kagekero

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: emscripten.yml  linux.yml  n3ds.yml  nokia-ngage.yml  windows.yml
assets/: .gitignore  001.tmj  002.tmj  003.tmj  004.tmj  005.tmj  006.tmj  base-512.tsx  base.tsx  hero.xcf  kagekero.world  kero.xcf  lookup.json  overlay.xcf  remap.py  tileset.xcf  title_screen.xcf
cmake/: get_SDL3.cmake  get_zlib.cmake
export/: .gitignore  data.pfs  index.html
res/: kagekero.aifspec  kagekero.mbm  kagekero.pkg  ncore.aifspec  ncore.mbm  ncore.pkg  ncore.rss
src/: aabb.c  aabb.h  app.c  app.h  cheats.c  cheats.h  config.h  core.c  core.h  fix32.h  fixedp.c  fixedp.cpp  fixedp.h  game.c  game.h  hero.c  hero.h  intro.c  intro.h  kagekero.c  kagekero.h  kero.c  kero.h  main.c  map.c  map.h  menu.c  menu.h  ncore.c  ncore.h  ngage.cpp  ngage_application.cpp  ngage_application.h  ngage_appui.cpp  ngage_appui.h  ngage_appview.cpp  ngage_appview.h  ngage_document.cpp  ngage_document.h  ninja.cpp  (+8 more)
tools/: CMakeLists.txt
